Self-host: green pure-jk CLI tests and clearer release ship shape
Isolate nested engines for clients/cli under jk test (JK_STATE_DIR,
jk.engine.jar, host CAS) so EngineTestExtension cannot kill the host.
Honor junit-platform / -Djunit.* in TestRunner; soft-fail TempDir
cleanup when CAS hardlinks pin trees. Pin plugin-sdk at Java 17 for
JDK-17 fixture SPI. Redesign jk release as native CLI + JVM engine
(workers install-local) without --native/--jvm; optional --skip-native.